k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wordpress1
---
apiVersion: v1
kind: Namespace
metadata:
  name: wordpress2
---
apiVersion: v1
kind: Namespace
metadata:
  name: wordpress3
