k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: 16m
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/wordpress1"
        backend:
          service:
            name: wordpress1-service
            port:
              number: 3000
      - pathType: Prefix
        path: "/wordpress2"
        backend:
          service:
            name: wordpress2-service
            port:
              number: 3001
      - pathType: Prefix
        path: "/wordpress3"
        backend:
          service:
            name: wordpress3-service
            port:
              number: 3002
      - pathType: Prefix
        path: "/wordpress4"
        backend:
          service:
            name: wordpress4-service
            port:
              number: 3003
